--- a/pdf/videogamesScraper.html
+++ b/pdf/videogamesScraper.html
@@ -257,7 +257,7 @@ Cortesía de Alexas, <a href="https://pixabay.com/es/mario-luigi-yoschi-cifras-g
 <li><strong>url_base</strong>: La dirección web generalde acceso a RetroCollect</li>
 <li><strong>listview</strong>: Sistema de visualización, por defecto <em>‘list’</em></li>
 <li><strong>modeview</strong>: Por defecto se buscan <em>‘games’</em></li>
-<li><strong>plataforma</strong>: La plataofrma de filtro, por defecto = 0, todas sin excepcion</li>
+<li><strong>plataforma</strong>: La plataforma de filtro, por defecto = 0, todas sin excepcion</li>
 <li><strong>sort</strong>: Esquema de ordenación, puede tomar 4 parámetros:
 <ul>
 <li><em>‘title’</em>, es el defectivo y es igual a <strong>NA</strong></li>
@@ -273,7 +273,7 @@ Cortesía de Alexas, <a href="https://pixabay.com/es/mario-luigi-yoschi-cifras-g
 <li><strong>url_base</strong>: La dirección web generalde acceso a RetroCollect</li>
 <li><strong>listview</strong>: Sistema de visualización, por defecto <em>‘list’</em></li>
 <li><strong>modeview</strong>: Por defecto se buscan <em>‘games’</em></li>
-<li><strong>plataforma</strong>: La plataofrma de filtro, por defecto = 0, todas sin excepcion</li>
+<li><strong>plataforma</strong>: La plataforma de filtro, por defecto = 0, todas sin excepcion</li>
 <li><strong>sort</strong>: Esquema de ordenación, puede tomar 4 parámetros:
 <ul>
 <li><em>‘title’</em>, es el defectivo y es igual a <strong>NA</strong></li>
