Actualización de la licencia a CC BY-NC-SA 4.0 International

--- a/pdf/videogamesScraper.html
+++ b/pdf/videogamesScraper.html
@@ -304,7 +304,7 @@ Cortesía de Alexas, <a href="https://pixabay.com/es/mario-luigi-yoschi-cifras-g
 </div>
 <div id="licencia" class="section level2">
 <h2><span class="header-section-number">2.7</span> Licencia</h2>
-<p>La licencia escogida para la publicación de este conjunto de datos ha sido <strong>CC BY-NC-SA 4.0 ES</strong>. Los motivos que han llevado a la elección de esta licencia tienen que ver con la idoneidad de las cláusulas que esta presenta en relación con el trabajo realizado:</p>
+<p>La licencia escogida para la publicación de este conjunto de datos ha sido <strong>CC BY-NC-SA 4.0 International</strong>. Los motivos que han llevado a la elección de esta licencia tienen que ver con la idoneidad de las cláusulas que esta presenta en relación con el trabajo realizado:</p>
 <p>Se permite con nuestro trabajo y la base de datos extraída de la web:</p>
 <ul>
 <li><em>Compartir</em> — copiar y redistribuir el material en cualquier medio o formato</li>
